# 17_pestel

./: .gitignore  README.md  app.py  economic_agent.md  environmental_agent.md  pyproject.toml  requirements.txt
src/vidmarpestel/: crew.py  main.py  my_llm.py
src/vidmarpestel/config/: agents.yaml  tasks.yaml
tests/: pyprojec2.txt  pyproject.txt
